# docs/swagger.json
@@ -402,6 +402,49 @@
                 }
             }
         },
+        "/user/daily": {
+            "post": {
+                "security": [
+                    {
+                        "ApiAuth": []
+                    }
+                ],
+                "description": "Получить награду за ежедневный вход",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user"
+                ],
+                "summary": "Ежедневный вход",
+                "responses": {
+                    "200": {
+                        "description": "Успех",
+                        "schema": {
+                            "$ref": "#/definitions/user.DailyReward"
+                        }
+                    },
+                    "400": {
+                        "description": "next possible daily reward will available at {date}",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "bad user id",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/user/profile_pic": {
             "put": {
                 "security": [
@@ -577,6 +620,19 @@
                 "username": {
                     "type": "string",
                     "example": "john doe"
+                }
+            }
+        },
+        "user.DailyReward": {
+            "type": "object",
+            "properties": {
+                "amount": {
+                    "type": "integer",
+                    "example": 1000
+                },
+                "angle_delta": {
+                    "type": "integer",
+                    "example": 27
                 }
             }
         },
